# mia_attacks

./: pyproject.toml
mia_attacks/: main_baseline.py  main_lira.py  main_quantile.py  main_rmia.py  main_shadow_attack.py
mia_attacks/baseline/: baseline_loss.py
mia_attacks/lira/: lira.py  model.py
