[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mia_attacks"
version = "0.1.0"
description = "Membership Inference Attacks"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Original authors + fork by Niels Tomassen" }]

dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "matplotlib",
  "scipy",
  "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
